FrontEnd/VitalSense/src/App.css
body {
  background-color: #fbfefd;
  margin: 0; 
  padding: 0; 
  height: 100vh;
  display: flex;
  align-items: center; 
  justify-content: center; 
}

.app-container {
  text-align: center; 
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: calc(100% - 60px); 
  padding-top: 60px; 
}

.button {
  background-color: #efa9b2;
}

.change-button{
  margin-right: 10px;
  margin-bottom: 10px;
  background-color: #efa9b2
}

.submit-button {
  background-color: #efa9b2
}

.button:hover, .submit-button:hover, .change-button:hover {
  background-color: #e78e99;
  border-color: #efa9b2;
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #bed1ee;
  z-index: 1000;
  padding: 1rem 0;
  width: 100%; 
}

.main-content {
  margin-top: 100px; 
  background-color: #fbfefd; 
  padding: 2rem;
  box-sizing: border-box;
  width: 100%; 
}

.main-content, .heart-beat {
  flex: 1; 
  padding: 2rem; 
  background-color: #fbfefd;
}

